--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </tr>
             <tr>
                 <td colspan="2"><input class="btnsize  " type="button" onclick="displayValue('0')" value="0" style="width: 130px"></td>
-                <td><input class="btnsize  " type="button" onclick="" value="."></td>
+                <td><input class="btnsize  " type="button" onclick="displayValue('.')" value="."></td>
                 
             </tr>
         </table>
