--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 </head>
 <body class="container">
-    <div class="container mt-5 size bg-dark text-white text-center">
+    <div class="container mt-5 size bg-dark text-white text-center fs-4">
         <h3 class="mb-1 mt-3">Calculator</h3>
         <table>
             <tr>
@@ -22,32 +22,32 @@
             </tr>
             <br>
             <tr>
-                <td><input class="btnsize" type="button" onclick="clearBox()" value="C"></td>
-                <td><input class="btnsize" type="button" onclick="backSpace()" value="<="></td>
-                <td><input class="btnsize" type="button" onclick="displayValue('/')" value="/"></td>
-                <td><input class="btnsize" type="button" onclick="displayValue('*')" value="*"></td>
+                <td><input class="btnsize mt-2" type="button" onclick="clearBox()" value="C"></td>
+                <td><input class="btnsize mt-2" type="button" onclick="backSpace()" value="<-"></td>
+                <td><input class="btnsize mt-2" type="button" onclick="displayValue('/')" value="/"></td>
+                <td><input class="btnsize mt-2" type="button" onclick="displayValue('*')" value="*"></td>
             </tr>
             <tr>
-                <td><input class="btnsize  " type="button" onclick="displayValue('7')" value="7"></td>
-                <td><input class="btnsize  " type="button" onclick="displayValue('8')" value="8"></td>
-                <td><input class="btnsize  " type="button" onclick="displayValue('9')" value="9"></td>
-                <td><input class="btnsize  " type="button" onclick="displayValue('-')" value="-"></td>
+                <td><input class="btnsize mt-2" type="button" onclick="displayValue('7')" value="7"></td>
+                <td><input class="btnsize mt-2" type="button" onclick="displayValue('8')" value="8"></td>
+                <td><input class="btnsize mt-2" type="button" onclick="displayValue('9')" value="9"></td>
+                <td><input class="btnsize mt-2" type="button" onclick="displayValue('-')" value="-"></td>
             </tr>
             <tr>
-                <td><input class="btnsize  " type="button" onclick="displayValue('4')" value="4"></td>
-                <td><input class="btnsize  " type="button" onclick="displayValue('5')" value="5"></td>
-                <td><input class="btnsize  " type="button" onclick="displayValue('6')" value="6"></td>
-                <td><input class="btnsize  " type="button" onclick="displayValue('+')" value="+"></td>
+                <td><input class="btnsize mt-2" type="button" onclick="displayValue('4')" value="4"></td>
+                <td><input class="btnsize mt-2" type="button" onclick="displayValue('5')" value="5"></td>
+                <td><input class="btnsize mt-2" type="button" onclick="displayValue('6')" value="6"></td>
+                <td><input class="btnsize mt-2" type="button" onclick="displayValue('+')" value="+"></td>
             </tr>
             <tr>
-                <td><input class="btnsize  " type="button" onclick="displayValue('1')" value="1"></td>
-                <td><input class="btnsize  " type="button" onclick="displayValue('2')" value="2"></td>
-                <td><input class="btnsize  " type="button" onclick="displayValue('3')" value="3"></td>
-                <td rowspan="2"><input class="btnsize  " type="button" onclick="evaluateExp()" value="=" style="height: 80px"></td>
+                <td><input class="btnsize mt-2" type="button" onclick="displayValue('1')" value="1"></td>
+                <td><input class="btnsize mt-2" type="button" onclick="displayValue('2')" value="2"></td>
+                <td><input class="btnsize mt-2" type="button" onclick="displayValue('3')" value="3"></td>
+                <td rowspan="2"><input class="btnsize mt-2" type="button" onclick="evaluateExp()" value="=" style="height: 90px"></td>
             </tr>
             <tr>
-                <td colspan="2"><input class="btnsize  " type="button" onclick="displayValue('0')" value="0" style="width: 130px"></td>
-                <td><input class="btnsize  " type="button" onclick="displayValue('.')" value="."></td>
+                <td colspan="2"><input class="btnsize mt-2  " type="button" onclick="displayValue('0')" value="0" style="width: 125px"></td>
+                <td><input class="btnsize mt-2  " type="button" onclick="displayValue('.')" value="."></td>
                 
             </tr>
         </table>
