updated text alignment

--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <!-- CSS only -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-<!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="./calculatorcss.css">
-<script src="./calculatorscript.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./calculatorcss.css">
+    <script src="./calculatorscript.js"></script>
 
 </head>
+
 <body class="container">
     <div class="container mt-5 size bg-dark text-white text-center fs-4">
         <h3 class="mb-1 mt-3">Calculator</h3>
@@ -43,14 +48,17 @@
                 <td><input class="btnsize mt-2" type="button" onclick="displayValue('1')" value="1"></td>
                 <td><input class="btnsize mt-2" type="button" onclick="displayValue('2')" value="2"></td>
                 <td><input class="btnsize mt-2" type="button" onclick="displayValue('3')" value="3"></td>
-                <td rowspan="2"><input class="btnsize mt-2" type="button" onclick="evaluateExp()" value="=" style="height: 90px"></td>
+                <td rowspan="2"><input class="btnsize mt-2" type="button" onclick="evaluateExp()" value="="
+                        style="height: 90px"></td>
             </tr>
             <tr>
-                <td colspan="2"><input class="btnsize mt-2  " type="button" onclick="displayValue('0')" value="0" style="width: 125px"></td>
+                <td colspan="2"><input class="btnsize mt-2  " type="button" onclick="displayValue('0')" value="0"
+                        style="width: 125px"></td>
                 <td><input class="btnsize mt-2  " type="button" onclick="displayValue('.')" value="."></td>
-                
+
             </tr>
         </table>
     </div>
 </body>
+
 </html>
